# Game_Bot

./: .gitignore  Cargo.toml  readme.md  run.bat  screen_capture.py
src/: main.rs
src/game_capture/: capture.rs  mod.rs  screen_capture.rs  window_capture.rs
src/games/: arknights.rs  fgo.rs  mod.rs  overwatch.rs  screen_capture.rs  skill_usage.py
src/gui/: gui.rs
