[package]
name = "Game_Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "handleapi", "winnt", "tlhelp32"] }
minifb = "0.27"
anyhow ="1"
nix = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "Game_Bot"
path = "src/main.rs"

[[bin]]
name = "Admin"
path = "admin/main.rs"

[package.metadata.winres]
file = "G:\\Code\\Game_Bot\\Game_Bot.manifest"