[package]
name = "Game_Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.39", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "handleapi", "winnt", "tlhelp32", "winuser"] }

minifb = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.2.1"
lazy_static = "1.4.0"
widestring = "0.5.0"

[[bin]]
name = "Game_Bot"
path = "src/main.rs"

[[bin]]
name = "Admin"
path = "admin/main.rs"

[package.metadata.winres]
file = "G:\\Code\\Game_Bot\\Game_Bot.manifest"